[bugfix] line overlap order

--- a/source/css/com.css.sass
+++ b/source/css/com.css.sass
@@ -151,6 +151,7 @@ input.placeholder
 #popup
   position: absolute
   z-index: 999
+  max-width: 100%
 
 .popup-container
   overflow: hidden
